# tag_ws

./: .gitignore  .gitmodules  camera pose output.md  readme.md  source_tag_sdk.sh  test_record.md
archive/ros_aruco/src/: ros_aruco.cpp
archive/usb_cam/launch/: usb_cam-test-view.launch  usb_cam_0.launch  usb_cam_1.launch
archive/whycon/: CMakeLists.txt  README.md
archive/whycon/src/ros/: set_axis.cpp
archive/whycon_yujie_1804/launch/: yujie_whycon_rviz.launch
archive/whycon_yujie_1804/src/ros/: whycon_ros.cpp  whycon_ros.h
fractal_ros/: CMakeLists.txt  package.xml
fractal_ros/include/fractal/: FractalROS.hpp
fractal_ros/launch/: fractal_ros.launch  mynteye_fractal_ros.launch
fractal_ros/src/: FractalROS.cpp  fractal_node.cpp  fractal_ros_simple.cpp
jeston/aruco_yujie/launch/: aruco_yujie_5_5.launch
jeston/aruco_yujie/src/: aruco_ros.cpp
resources/: readme.md
resources/pdfs/: readme.md
resources/pdfs/fractal/custom/: custom_fractal_marker.pptx  fractal_12_8_8_4_4_0.yml  fractal_13_9_12_8_8_4_4_0.yml  fractal_8_4_2_0.yml  fractal_8_4_4_0.yml  fractal_9_5_4_0.yml  fractal_9_5_8_4_2_0.yml
src/apriltag_ros/apriltag/: CMakeLists.txt
src/apriltag_ros/apriltag_ros/: CMakeLists.txt
src/apriltag_ros/apriltag_ros/launch/yujie/: mynt_apriltag_jeston.launch
src/aruco_ros/: package.xml
src/aruco_ros/aruco/: CMakeLists.txt
src/aruco_ros/aruco_msgs/: CMakeLists.txt
src/aruco_ros/aruco_ros/: CMakeLists.txt
src/aruco_ros/aruco_ros/launch/: yujie.launch
src/aruco_ros/launch/: aruco_opencv_mynteye.rviz
src/aruco_ros/launch/yujie_jeston/: mynt_aruco_jeston.launch
src/aruco_ros/src/: aruco_ros.cpp
src/aruco_yujie/: CMakeLists.txt  package.xml
src/aruco_yujie/bags/: readme.md
src/aruco_yujie/launch/: aruco_yujie.launch  aruco_yujie_5_5_rosbag.launch  aruco_yujie_5_5_rosbag_mynteye.launch  aruco_yujie_6_6.launch  mynteye_aruco_yujie_5_5_rosbag.launch
src/aruco_yujie/launch/yujie_jeston/: mynt_aruco_jeston.launch
src/aruco_yujie/msg/: ArucoInfo.msg
src/aruco_yujie/src/: aruco_ros.cpp
src/cv_camera/: CMakeLists.txt
src/cv_camera/config/trust_webcam/: camera.yaml
src/cv_camera/launch/: cv_camera_only.launch  cv_camera_test.launch  cv_camera_view.launch  cv_camera_view_rect.launch  rect_view.launch
src/cv_camera/launch/deprecated/: image_rect_view.launch
src/fractal_ros/: readme.md
src/fractal_ros/aruco_fractal/: CMakeLists.txt  package.xml
src/fractal_ros/aruco_fractal/cmake/: detection_opencv.cmake
src/fractal_ros/aruco_fractal/include/aruco_fractal/: fractaldetector.h
src/fractal_ros/aruco_fractal/include/aruco_fractal/fractallabelers/: fractalmarkerset.h  fractalposetracker.h
src/fractal_ros/aruco_fractal/src/aruco_fractal/: cvdrawingutils.cpp  fractaldetector.cpp
src/fractal_ros/fractal/: CMakeLists.txt
src/fractal_ros/fractal_msg/: CMakeLists.txt  package.xml
src/fractal_ros/fractal_msg/msg/: ArucoInfo.msg  FractalInfo.msg  PoseStamped.msg
src/fractal_ros/fractal_ros/: CMakeLists.txt  package.xml
src/fractal_ros/fractal_ros/bags/: fractal
src/fractal_ros/fractal_ros/include/fractal/: FractalROS.hpp
src/fractal_ros/fractal_ros/launch/: cvcam_fractal.launch  cvcam_fractal_rosbag.launch  fractal_ros.launch  mynt_fractal.launch  mynt_fractal_rosbag.launch  mynt_rosbag.launch  mynteye_fractal_ros.launch
src/fractal_ros/fractal_ros/launch/yujie_jeston/: mynt_fractal_jeston.launch
src/fractal_ros/fractal_ros/src/: FractalROS.cpp  fractal_ros.cpp  fractal_ros_simple.cpp
src/fractal_yujie/: CMakeLists.txt  package.xml
src/fractal_yujie/cmake/: detection_aruco.cmake
src/fractal_yujie/src/: fractal_ros.cpp
src/marker_msgs/: CMakeLists.txt  package.xml
src/marker_msgs/msg/: DegreeStamped.msg  DistStamped.msg  PoseDegreeStamped.msg  PoseStamped.msg  RpyDegree.msg
src/usb_cam/: CMakeLists.txt
src/usb_cam/launch/: usb_cam_rqt.launch
src/vision_opencv/: README.md
src/vision_opencv/cv_bridge/: CMakeLists.txt
src/vision_opencv/image_geometry/: CMakeLists.txt
src/whycon/: CMakeLists.txt  package.xml
src/whycon/launch/: mynt_whycon_jeston.launch  mynt_whycon_rviz.launch  mynt_yujie_whycon_rviz.launch  rqt_whycon_yujie.launch  whycon_mynt_leftright.rviz  yujie_set_axis.launch  yujie_whycon.launch  yujie_whycon_rviz.launch  yujie_whycon_rviz_rosbag.launch
src/whycon/launch/yujie/: cvcam_whycon_rviz.launch
src/whycon/launch/yujie_jeston/: mynt_whycon_jeston.launch
src/whycon/src/lib/: circle_detector.cpp
src/whycon/src/ros/: whycon_ros.cpp
todo/fractal_tag/: .gitignore  CMakeLists.txt  readme.md
todo/fractal_tag/src/: sample_detection.cpp  yujie_sample_detection.cpp
todo/fractal_tag_sep/: CMakeLists.txt  cameraParams.yml  readme.md
todo/fractal_tag_sep/src/: fractal_tracker.cpp  sample_landing.cpp  yujie_sample_detection.cpp  yujie_sample_landing.cpp
